# sensor2

./: Readme.md
esp32-c6-hp-climate/: Cargo.toml  build.rs
esp32-c6-hp-climate/.cargo/: config.toml
esp32-c6-hp-climate/src/: main.rs
esp32-c6-lp-climate/: Cargo.toml  Readme.md
esp32-c6-lp-climate/.cargo/: config.toml
esp32-c6-lp-climate/src/: main.rs
hardware/temperature_sensor/: .gitignore  housing-body.3mf  housing-lid.3mf  housing.FCStd  temperature_sensor.kicad_pcb  temperature_sensor.kicad_prl  temperature_sensor.kicad_pro  temperature_sensor.kicad_sch
shared/src/: lib.rs
