[package]
name = "esp32-c6-hp-climate"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14", features = ["esp32c6", "exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.22", features = ["esp32c6"] }
esp-println = { version = "0.12", features = ["esp32c6", "log"] }
bme280 = { version = "0.5" }

[features]
lp = []